# HighSchoolProjects

./: .gitignore  CMakeLists.txt  README.md
.circleci/: config.yml
.github/workflows/: cmake.yml
AP/: CMakeLists.txt  apmatrix.cxx  apmatrix.h  apqueue.cxx  apqueue.h  apstack.cxx  apstack.h  apstring.cxx  apstring.h  apvector.cxx  apvector.h
CMG2/: CMakeLists.txt
CMG2/include/: old.tgz
CMG2/src/: GLUTImp.cpp  GLUTImp.h  Window.cpp  version.h
Projectile/: CMakeLists.txt  ImageMap.cpp  ImageMap.h  Projectile.cpp  Projectile.h  colors.h  main.cpp
draw_test/: CMakeLists.txt  draw_test.cpp
freetype/: CMakeLists.txt
gltt/: CMakeLists.txt  GLTTGlyphPolygonizerHandler.h
src/: Makefile
src/Projectile/: Projectile.cpp  makefile
